[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/Pickup.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/Rise02.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/Coin01.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Pickup" type="Area2D"]
collision_layer = 2147483656
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="HexPickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[node name="KeyPickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
